--- a/CSS/stylesheet-index.css
+++ b/CSS/stylesheet-index.css
@@ -12,3 +12,14 @@ body{
     padding: 0;
 }
 
+@media (min-width: 390px) and  (max-width: 844px) {
+
+}
+
+@media (min-width: 1920px) and  (max-width: 1080px) {
+
+}
+
+@media (min-width: 390px) and  (max-width: 844px) {
+
+}
