--- a/CSS/stylesheet-index.css
+++ b/CSS/stylesheet-index.css
@@ -16,11 +16,21 @@ body{
 header {
     background-color: #4a4adf;
     padding: 1rem 0;
+    display: flex;
+}
+
+.logo{
+    list-style: none;
+    display: flex;
+    justify-content: left;
+    position: relative;
+    left: 10px;
 }
 
 nav{
     background-color: #5B57D3;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
+    z-index: 10;
 }
 
 nav ul{
@@ -49,14 +59,6 @@ nav a{
 
 nav a:hover{
     background-color: #33317c;
-}
-
-.logo{
-    list-style: none;
-    display: flex;
-    justify-content: left;
-    position: absolute;
-    left: 10px;
 }
 
 .sidebar{
