--- a/CSS/stylesheet-index.css
+++ b/CSS/stylesheet-index.css
@@ -160,3 +160,51 @@ button {
 button:hover {
     background: #aaa;
 }
+
+/*For dropdown menu on profile*/
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropbtn {
+    height: 100%;
+    padding: 0 30px;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    color: white;
+    background-color: #7a76f424;
+    border-radius: 8px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #33317c;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    display: block;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.show {
+    display: block;
+}
