Fixed some changes from last commit

--- a/CSS/mainview.css
+++ b/CSS/mainview.css
@@ -93,8 +93,8 @@ nav a:hover {
 }
 
 @media (max-width: 768px) {
-  .hideOnMobile {
-    display: none;
+  .hideOnMobile, .dropdown{
+    display: none !important;
   }
   .menuButton {
     display: block;
