--- a/public/CSS/index-content.css
+++ b/public/CSS/index-content.css
@@ -96,3 +96,18 @@ button:hover {
 .delete-btn:hover {
   background-color: #e74c3c;
 }
+
+td.expiring-red {
+  color: #c0392b;
+  font-weight: bold;
+}
+
+td.expiring-orange {
+  color: #e67e22;
+  font-weight: bold;
+}
+
+td.expiring-green {
+  color: #27ae60;
+  font-weight: bold;
+}
