--- a/public/CSS/stylesheet-signUp.css
+++ b/public/CSS/stylesheet-signUp.css
@@ -63,3 +63,25 @@
 .container a:hover {
   text-decoration: underline;
 }
+.password-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.password-container input {
+  flex: 1;
+  padding-right: 40px;
+}
+
+.toggle-password {
+  position: absolute;
+  right: 10px;
+  cursor: pointer;
+}
+
+.eye-icon {
+  width: 20px;
+  height: 20px;
+  fill: #5555557e;
+}
