--- a/public/CSS/products-content.css
+++ b/public/CSS/products-content.css
@@ -43,14 +43,17 @@
   position: absolute;
   top: 0;
   left: 0;
-  padding: 10.5px;
+  padding: 10px;
   font-size: 15px;
   color: #ccc;
   pointer-events: none;
-  z-index: 1;
+  z-index: 100;
   font-family: inherit;
   white-space: nowrap;
   overflow: hidden;
+}
+#ghost-suggestion .typed {
+  color: transparent;
 }
 .search-container .search-btn {
   background: #ffebbb;
