--- a/public/CSS/mainview.css
+++ b/public/CSS/mainview.css
@@ -198,7 +198,7 @@ nav a:active {
   position: absolute;
   top: 100%;
   right: 0;
-  background-color: #f1ad0085; /* Samme som sidebar */
+  background-color: #F1AD00; /* Samme som sidebar */
   min-width: 160px;
   display: flex;
   flex-direction: column;
@@ -231,7 +231,7 @@ nav a:active {
   width: 100%;
   box-sizing: border-box;
   background-color: transparent;
-  color: black;
+  color: white;
   padding: 12px 16px;
   text-align: left;
   font-size: 16px;
