made button and a have same line

--- a/public/CSS/mainview.css
+++ b/public/CSS/mainview.css
@@ -238,3 +238,12 @@ nav a:active {
   box-shadow: none;
 }
 
+.dropdown-content button {
+  margin: 0;
+  padding: 12px 16px;
+  line-height: 1.4;
+  font-family: inherit;
+  border: none;
+  background: none;
+  outline: none;
+}
