mainview.css author

--- a/public/CSS/mainview.css
+++ b/public/CSS/mainview.css
@@ -1,4 +1,7 @@
-/* @author: MartinN, Atle */
+/* 
+@author: MartinN 
+@author: Atle 
+*/
 
 /* Reset default styles for all elements, before/after for good practice */
 *,
