--- a/public/CSS/about-content.css
+++ b/public/CSS/about-content.css
@@ -1,4 +1,7 @@
-/* @author Marius */
+/**
+* @author Atle
+* @author Marius
+*/
 /*# sourceMappingURL=about-content.css.map */
 
 .about-container {
