--- a/public/CSS/index-content.css
+++ b/public/CSS/index-content.css
@@ -1,6 +1,6 @@
-/* 
-@author: Martin N
-@author: Atle
+/** 
+* @author Martin N
+* @author Atle
 */
 
 /* Global reset for margin, padding, and box-sizing */
