--- a/public/CSS/mainview.css
+++ b/public/CSS/mainview.css
@@ -1,6 +1,6 @@
-/* 
-@author: MartinN 
-@author: Atle 
+/**
+* @author Martin N 
+* @author Atle 
 */
 
 /* Reset default styles for all elements, before/after for good practice */
