--- a/public/CSS/stylesheet-signUp.css
+++ b/public/CSS/stylesheet-signUp.css
@@ -41,8 +41,8 @@
 
 .container .button,
 .container button {
-  background-color: #159a31;
-  color: white;
+  background-color: #29AE46;
+  color: black;
   border: none;
   padding: 12px;
   border-radius: 20px;
