--- a/public/CSS/index-content.css
+++ b/public/CSS/index-content.css
@@ -92,7 +92,7 @@ h2 {
   padding: 0.75rem 1.5rem;
   font-size: 1rem;
   background-color: #F1AD00;
-  color: white;
+  color: black;
   border: none;
   border-radius: 8px;
   cursor: pointer;
@@ -251,7 +251,7 @@ button {
 
 .category-btn:hover span,
 .category-btn.active span {
-  color: white;
+  color: black;
 }
 
 .inventory-wrapper {
