--- a/public/CSS/products-content.css
+++ b/public/CSS/products-content.css
@@ -69,7 +69,7 @@
 
 .search-container .search-btn {
   background: #ffebbb;
-  color: white;
+  color: black;
   border: none;
   padding: 10px 15px;
   font-size: 16px;
